kubernetes/applications/prometheus/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    # ExternalDNS configuration for Cloudflare
    external-dns.alpha.kubernetes.io/target: udm-pro.zimmermann.sh
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    kubernetes.io/ingress.class: traefik
    # Homepage Service Discovery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Observability"
    gethomepage.dev/name: "Prometheus"
    gethomepage.dev/icon: "prometheus.png"
    gethomepage.dev/href: "https://prometheus.zimmermann.sh"
    gethomepage.dev/weight: "1"
    gethomepage.dev/widget.type: "prometheus"
    gethomepage.dev/widget.url: "http://prometheus-operated.prometheus.svc.cluster.local:9090"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      priority: 10
      middlewares:
        - name: chain-mfa-auth
          namespace: ingress-controller
      services:
        - kind: Service
          name: prometheus-server
          port: 80
  tls:
    secretName: prometheus-tls-cert
