kubernetes/applications/prometheus/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: prometheus
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.zimmermann.sh`)
      priority: 10
      services:
        - kind: Service
          name: prometheus-server
          port: 80
  tls:
    secretName: prometheus-tls-cert
